--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation("androidx.recyclerview:recyclerview:1.2.1")
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha04'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha04'
@@ -56,7 +57,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     implementation "com.airbnb.android:epoxy:4.6.2"
-    annotationProcessor "com.airbnb.android:epoxy-processor:4.6.2"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt "com.airbnb.android:epoxy-processor:4.6.2"
+
+    implementation "com.airbnb.android:paris:1.7.3"
+    kapt "com.airbnb.android:paris-processor:1.7.3"
+
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
